add chat styling

--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -2,6 +2,6 @@
   margin: auto;
   border-radius: 1rem;
   padding: 2rem;
-  background-color: white;
-  color: black;
+  background-color: #d9d9d9;
+  color: #000000;
 }
