--- a/src/components/Chat.module.css
+++ b/src/components/Chat.module.css
@@ -1,23 +1,19 @@
 .chat-box {
   display: flex;
   flex-direction: column;
-  width: 30rem;
+  width: 50rem;
   height: 70vh;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  background-color: #f9f9f9;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .chat-messages {
   flex: 1;
-  padding: 10px;
+  padding: 1rem;
   overflow-y: auto;
 }
 
 .chat-messages p {
-  background-color: #e1ffc7;
-  padding: 8px 12px;
+  background-color: #8f8f8f;
+  padding: 1rem;
   margin: 5px 0;
   border-radius: 6px;
   max-width: 80%;
@@ -25,29 +21,27 @@
 
 .chat-input {
   display: flex;
-  padding: 10px;
-  border-top: 1px solid #ccc;
-  background-color: white;
+  padding: 1rem 1rem 0 1rem;
 }
 
 .chat-input input {
   flex: 1;
-  padding: 8px;
+  padding: 1rem;
   border: 1px solid #ccc;
-  border-radius: 6px;
+  border-radius: 2rem;
   outline: none;
 }
 
 .chat-input button {
-  margin-left: 10px;
-  padding: 8px 16px;
-  background-color: #4cafef;
+  margin-left: 1rem;
+  padding: 1rem;
+  background-color: #8f8f8f;
   color: white;
   border: none;
-  border-radius: 6px;
+  border-radius: 2rem;
   cursor: pointer;
 }
 
 .chat-input button:hover {
-  background-color: #3a9bdc;
+  background-color: #797979;
 }
